--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,9 @@
     "@fontsource/lexend": "^5.1.2",
     "@fontsource/poppins": "^5.1.1",
     "@fontsource/roboto": "^5.1.1",
+    "@material-tailwind/react": "^2.1.10",
     "@tailwindcss/vite": "^4.0.0",
+    "lucide-react": "^0.474.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
