--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@fontsource/roboto": "^5.1.1",
     "@tailwindcss/vite": "^4.0.0",
     "lucide-react": "^0.474.0",
+    "motion": "^12.0.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
